--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ MANIFEST
 # Pickled files
 *.p
 
+# VS Code settings
+.vscode/
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
